--- a/leetcode_2018/google_extra.ipynb
+++ b/leetcode_2018/google_extra.ipynb
@@ -21,69 +21,6 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "\n",
-    "Given a max heap as an array, return the top k elements. Do not modify heap or copy entire heap\n",
-    "to a different data structure. Example:\n",
-    "\n",
-    "    15\n",
-    "  /    \\\n",
-    "13      12\n",
-    "/  \\    /\n",
-    "10  8  9\n",
-    "\n",
-    "int[] arr = {15,13,12,10,8,9};\n",
-    "List<Integer> peekTopK(int[] arr, int k)\n",
-    "Expected output for k = 5 ==> [15,13,12,10,9]\n",
-    "\n",
-    "Running Time: O(k log(k))\n",
-    "\n",
-    "\"\"\"\n",
-    "heap_array = [15,13,12,10,8,9]\n",
-    "k = 5\n",
-    "\n",
-    "def priority_queue(temp_list):\n",
-    "    # Max heap largest element\n",
-    "    heapq.heapify(temp_list)\n",
-    "    n = temp_list[-1]\n",
-    "    temp_list = temp_list[:-1]\n",
-    "    return n, temp_list\n",
-    "\n",
-    "def top_k_heap(heap_array, k):\n",
-    "    result = []\n",
-    "    if k > 0:\n",
-    "        result.append(heap_array[0])\n",
-    "        k -= 1\n",
-    "    kids = []\n",
-    "    i = 0\n",
-    "    while k:\n",
-    "        left = 2*i+1\n",
-    "        right = left + 1\n",
-    "        if left < len(heap_array):\n",
-    "            kids.append(heap_array[left])\n",
-    "        if right < len(heap_array):\n",
-    "            kids.append(heap_array[right])\n",
-    "\n",
-    "        if k > 0:\n",
-    "            \"\"\" priority queue \"\"\"\n",
-    "            # n, kids = priority_queue(kids)\n",
-    "            # result.append(n)\n",
-    "            \"\"\" Sorting \"\"\"\n",
-    "            kids.sort()\n",
-    "            result.append(kids.pop())\n",
-    "        k -= 1\n",
-    "        i += 1\n",
-    "    return result\n",
-    "\n",
-    "print(top_k_heap(heap_array, k))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
     "Return the longest movie title found by successively matching the last and\n",
     "first words in each title, joining to form new titles, given an array containing a list of movie titles.\n",
     "\n",
@@ -118,13 +55,12 @@
     "input: [4,6,9,3,13,18] output: 2 >> {(4,6,3,13),(6,9,3,18)}\n",
     "\n",
     "\"\"\"\n",
-    "nums = [4,6,9,3,13,18]\n",
-    "\n",
-    "# Working\n",
     "def fourSum(nums):\n",
     "    ans = 0\n",
     "    hashmap = set(nums[2:])\n",
+    "    pp.pprint(hashmap)\n",
     "    for end, C in enumerate(nums[2:], 2):\n",
+    "        print(\">> removing: %s\" %C)\n",
     "        hashmap.remove(C)\n",
     "        if not hashmap:\n",
     "            break\n",
@@ -134,6 +70,9 @@
     "                if a + b + C in hashmap:\n",
     "                    ans += 1\n",
     "    return ans\n",
+    "\n",
+    "#\n",
+    "nums = [4,6,9,3,13,18]\n",
     "print(fourSum(nums))"
    ]
   },
@@ -227,8 +166,9 @@
     "    # DFS\n",
     "    path_to_n1 = set(bfs(root, n1))\n",
     "    path_to_n2 = set(bfs(root, n2))\n",
-    "    \n",
+    "    print(\"path to N1:\")\n",
     "    print(path_to_n1)\n",
+    "    print(\"path to N2:\")\n",
     "    print(path_to_n2)\n",
     "    # Distance will be unique nodes are path of the Union\n",
     "    return len(path_to_n1.union(path_to_n2) - path_to_n1.intersection(path_to_n2))\n",
@@ -295,9 +235,9 @@
     "    I.children = [L]\n",
     "\n",
     "    # Method 1\n",
-    "    # print(distance_DSF(root, M, H))\n",
+    "    print(distance_DSF(root, M, H))\n",
     "    \n",
-    "    print(distance_LCA(root, M, H))\n",
+    "    #print(distance_LCA(root, M, H))\n",
     "\n",
     "\n",
     "create_tree()\n"
@@ -533,6 +473,7 @@
     "# Greedy approach\n",
     "# only works when couples are arranged as (0,1) and not (0,0) or (1,1)\n",
     "# array = [0,3,1,2,5,4]\n",
+    "\n",
     "# O(n^2)\n",
     "def minSwapsCouples(row):\n",
     "    ans = 0\n",
@@ -569,16 +510,12 @@
     "    return swaps\n",
     "\n",
     "array = [2,6,4,5,1,3]\n",
-    "print(\">> greedy swap: %s\" %minSwapsCouples(array))\n",
-    "print(\">> hash swap: %s\" %minSwaps(array))"
+    "#print(\">> greedy swap: %s\" %minSwapsCouples(array))\n",
+    "#print(\">> hash swap: %s\" %minSwaps(array))\n",
+    "\n",
+    "array3 = [2,1,2,3,1,3]\n",
+    "#print(\">> same pairing: %s\" %couple_pairing(array3))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -778,7 +715,11 @@
     "    return max(temp)\n",
     "\n",
     "\n",
-    "nums = [[3,4,5],[3,2,6],[2,2,1]]\n",
+    "nums = [\n",
+    "    [3,4,5],\n",
+    "    [3,2,6],\n",
+    "    [2,2,1]\n",
+    "]\n",
     "longestIncreasingPath(nums)"
    ]
   },
@@ -867,7 +808,7 @@
     "        right += 1\n",
     "    return \"\" if result[0] == float('inf') else s[result[1]:result[2]+1]\n",
     "\n",
-    "minWindow('ABAACBAB', 'ABC')"
+    "minWindow('ADOBECODEBANC', 'ABC')"
    ]
   },
   {
@@ -1548,7 +1489,7 @@
     "]\n",
     "\n",
     "obj = NumMatrix(matrix)\n",
-    "obj.update(3, 3, 90)\n",
+    "obj.update(2, 1, 4)\n",
     "pp.pprint(obj.matrix)\n",
     "#obj.sumRegion(2,1,4,3)"
    ]
@@ -1806,34 +1747,58 @@
     "def word_ladder2(beginWord, endWord, wordList):\n",
     "    \n",
     "    def bfs_words(begin, end, dict_words):\n",
-    "        queue= [(begin, [begin])]\n",
+    "        queue= [(begin, 1, [begin])]\n",
+    "        order = {}\n",
     "        visited = set()\n",
     "        result = []\n",
     "        while queue:\n",
-    "            word, steps = queue.pop(0)\n",
+    "            word, level, steps = queue.pop(0)\n",
     "            if word == end:\n",
     "                pp.pprint(\">> %s\" %steps)\n",
-    "                result.append(steps)\n",
+    "                if not result:\n",
+    "                    result.append(steps)\n",
+    "                elif result and len(steps) <= len(result[0]):\n",
+    "                    result.append(steps)\n",
+    "            \n",
     "            if word in visited:\n",
-    "                continue\n",
+    "                if word in order and level > order[word]:\n",
+    "                    continue\n",
     "            visited.add(word)\n",
+    "            order[word] = level\n",
     "            for i in range(len(word)):\n",
     "                s = word[:i] + \"_\" + word[i+1:]\n",
     "                neigh_words = dict_words.get(s, [])\n",
     "                for neigh in neigh_words:\n",
-    "                    if neigh not in visited:\n",
-    "                        queue.append((neigh, steps + [neigh]))\n",
-    "            pp.pprint(queue)\n",
-    "            print(\"================\")\n",
+    "                    if neigh not in order:\n",
+    "                        queue.append((neigh, level+1, steps + [neigh]))\n",
     "        return result\n",
     "    d = construct_dict(wordList)\n",
-    "    pp.pprint(d)\n",
-    "    return bfs_words(beginWord, endWord, d)\n",
+    "    result = bfs_words(beginWord, endWord, d)\n",
+    "    return result\n",
     "\n",
     "beginWord = 'hit'\n",
     "endWord = 'cog'\n",
     "wordList = [\"hot\",\"dot\",\"dog\",\"lot\",\"log\",\"cog\"]\n",
-    "#word_ladder2(beginWord, endWord, wordList)\n"
+    "#beginWord = 'a'\n",
+    "#endWord = 'c'\n",
+    "#wordList = [\"a\",\"b\",\"c\"]\n",
+    "\n",
+    "#beginWord = \"red\"\n",
+    "#endWord = \"tax\"\n",
+    "#wordList = [\"ted\",\"tex\",\"red\",\"tax\",\"tad\",\"den\",\"rex\",\"pee\"]\n",
+    "# [[\"red\",\"ted\",\"tad\",\"tax\"],[\"red\",\"ted\",\"tex\",\"tax\"],[\"red\",\"rex\",\"tex\",\"tax\"]]\n",
+    "word_ladder2(beginWord, endWord, wordList)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = [['a', 'c'], ['a', 'b', 'c'], ['g', 'y']]\n",
+    "\n",
+    "sorted(list1, key = lambda x:len(x))"
    ]
   },
   {
@@ -1897,6 +1862,7 @@
     "    # Generate all possible 2 digit values\n",
     "    # There are at most 16 sorted values here\n",
     "    nums = sorted(set(hour + minute))\n",
+    "    pp.pprint(nums)\n",
     "    two_digit_values = [a+b for a in nums for b in nums]\n",
     "    print(two_digit_values)\n",
     "    # Check if the next valid minute is within the hour\n",
@@ -1926,10 +1892,7 @@
     "def extraString(strs1, strs2):\n",
     "    d = {}\n",
     "    for c in strs1:\n",
-    "        try:\n",
-    "            d[c] += 1\n",
-    "        except:\n",
-    "            d[c] = 1\n",
+    "        d[c] = d.get(c, 0) + 1\n",
     "    pp.pprint(d)\n",
     "    for c in strs2:\n",
     "        try:\n",
@@ -2203,30 +2166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0, 0, 0, 0, 0, 0, 0],\n",
-      " [0, 3, 5, 5, 5, 5, 5, 5],\n",
-      " [0, 3, 5, 5, 8, 8, 8, 8],\n",
-      " [0, 3, 5, 5, 8, 8, 8, 10]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" 188. Best Time to Buy and Sell Stock IV \n",
     "with at most k transactions.\n",
@@ -2268,29 +2210,125 @@
     "    return r_profits[-1]\n",
     "\n",
     "prices = [1, 2, 4, 2, 5, 7, 2, 4, 9, 0]\n",
-    "prices = [2, 5, 7, 1, 4, 3, 1, 3]\n",
+    "prices = [3,2,6,5,0,3]\n",
     "#maxProfit(prices)\n",
     "maxProfit_dp(prices)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def medianSlidingWindow(nums, k):\n",
+    "    lh,rh,rv = [],[],[]\n",
+    "    from heapq import heappush, heappop\n",
+    "    # create the initial left and right heap\n",
+    "    for i,n in enumerate(nums[:k]):\n",
+    "        heappush(lh, (-n,i))\n",
+    "    for i in range(k-k//2):\n",
+    "        heappush(rh, (-lh[0][0], lh[0][1]))\n",
+    "        heappop(lh)\n",
+    "    print(lh)\n",
+    "    print(rh)\n",
+    "    for i,n in enumerate(nums[k:]):\n",
+    "        print(i, n)\n",
+    "        rv.append(rh[0][0]/1 if k%2 else (rh[0][0] - lh[0][0])/2)\n",
+    "        if n >= rh[0][0]:\n",
+    "            heappush(rh,(n,i+k))        # rh +1\n",
+    "            if nums[i] <= rh[0][0]:     # lh-1, unbalanced\n",
+    "                print(\">> rh: comparing %s\" %nums[i])\n",
+    "                heappush(lh, (-rh[0][0], rh[0][1]))\n",
+    "                heappop(rh)\n",
+    "            # else: pass                # rh-1, balanced\n",
+    "        else:\n",
+    "            heappush(lh,(-n,i+k))        # rh +1\n",
+    "            if nums[i] >= rh[0][0]:     # rh-1, unbalanced\n",
+    "                print(\">> lh: comparing %s\" %nums[i])\n",
+    "                heappush(rh, (-lh[0][0], lh[0][1]))\n",
+    "                heappop(lh)\n",
+    "            # else: pass                # lh-1, balanced\n",
+    "        while(lh and lh[0][1] <= i): heappop(lh)  # lazy-deletion\n",
+    "        while(rh and rh[0][1] <= i): heappop(rh)  # lazy-deletion\n",
+    "    rv.append(rh[0][0]/1 if k%2 else (rh[0][0] - lh[0][0])/2)\n",
+    "    return rv\n",
+    "\n",
+    "nums = [1,3,-1,-3,5,3,6,7]\n",
+    "medianSlidingWindow(nums, k=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def totalFruit(tree):\n",
+    "    \"\"\"\n",
+    "    :type tree: List[int]\n",
+    "    :rtype: int\n",
+    "    \"\"\"\n",
+    "    hashmap = Counter()\n",
+    "    i = 0\n",
+    "    result = 0\n",
+    "    for j, t in enumerate(tree):\n",
+    "        hashmap[t] += 1\n",
+    "        if len(hashmap) >= 3:\n",
+    "            hashmap[tree[i]] -= 1\n",
+    "            if hashmap[tree[i]] == 0:\n",
+    "                del hashmap[tree[i]]\n",
+    "            i += 1\n",
+    "        pp.pprint(hashmap)\n",
+    "        result = max(result, j-i+1)\n",
+    "    return result\n",
+    "\n",
+    "tree = [3,3,3,1,2,1,1,2,3,3,4]\n",
+    "totalFruit(tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "{(0, 0), (0, 1), (1, 0), (1, 2), (2, 1), (2, 2)}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'z' == 'Z'"
+    "stones = [[0,0],[0,1],[1,0],[1,2],[2,1],[2,2]]\n",
+    "\n",
+    "points = {(i, j) for i, j in stones}\n",
+    "points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0), (0, 1), (1, 0), (1, 2), (2, 1), (2, 2)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stones = list(map(tuple, stones))\n",
+    "stones"
    ]
   }
  ],
