--- a/leetcode_2018/google_extra.ipynb
+++ b/leetcode_2018/google_extra.ipynb
@@ -16,29 +16,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "123//10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def isPossible(nums):\n",
     "    \"\"\"\n",
@@ -71,18 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 ec ffff\n",
-      "0 ab eee\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "S = \"abcd\"\n",
     "indexes = [0,2]\n",
@@ -94,20 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import bisect\n",
     "bisect.bisect_right([1,4], 3)"
@@ -115,20 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 'ab'\n",
     "best = 'ba'\n",
@@ -293,9 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{9, 18, 3, 13}\n",
+      ">> removing: 9\n",
+      ">> removing: 3\n",
+      ">> removing: 13\n",
+      ">> removing: 18\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Given an array of Integers, find out how many combinations in the array,\n",
@@ -680,7 +662,7 @@
    "source": [
     "\"\"\"\n",
     "N different couple goes to a cinema with 2N different seats. They take their place randomly.\n",
-    "You could make swap operation. Write a code for given input what is the minimum number of \n",
+    "You could make swap operation. Write a code for given input, what is the minimum number of \n",
     "swap operations for sitting all couples with their partners? Additionally, be sure that no\n",
     "one swaps more than 2 times.\n",
     "\n",
